--- a/video/templates/video/navigation.html
+++ b/video/templates/video/navigation.html
@@ -1,33 +1,40 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="{% url 'index' %}">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-      </ul>
-      <ul class="navbar-nav">
-        {% if user.is_authenticated %}
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'video-create' %}">Upload Video</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'account_logout' %}">Sign Out</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'profile' user.profile.pk %}">
-                <img src="{{ user.profile.image.url }}" width="35" height="35" class="d-inline-block rounded-circle" alt="profile">
-            </a>
-        </li>
-        {% else %}
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'account_signup' %}">Register</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'account_login' %}">Sign In</a>
-        </li>
-        {% endif %}
-      </ul>
-    </div>
-  </nav>
+  <a class="navbar-brand" href="{% url 'index' %}">Video Sharer</a>
+  <a class="navbar-brand" href="{% url 'video-create' %}">Upload Video</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <form class="form-inline my-2 my-lg-0 d-flex flex-row" method="GET" action="{% url 'video-search' %}">
+      <input class="form-control mr-sm-2" type="search" name="q" placeholder="Search" aria-label="Search" value="{{ request.GET.q }}">
+      <button class="search-button" type="submit">
+        <span class="input-group-text border-0" id="search-addon">
+         search
+        </span>
+      </button>
+    </form>
+    <ul class="navbar-nav mr-auto">
+    </ul>
+    <ul class="navbar-nav">
+      {% if user.is_authenticated %}
+      <li class="nav-item">
+          <a class="nav-link" href="{% url 'video-create' %}">Upload Video</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'account_logout' %}">Sign Out</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'profile' user.profile.pk %}"><img src="{{ user.profile.image.url }}" width="35" height="35" class="d-inline-block rounded-circle" alt="Profile"></a>
+      </li>
+      {% else %}
+      <li class="nav-item">
+          <a class="nav-link" href="{% url 'account_signup' %}">Register</a>
+      </li>
+      <li class="nav-item">
+          <a class="nav-link" href="{% url 'account_login' %}">Sign In</a>
+      </li>
+      {% endif %}
+    </ul>
+  </div>
+</nav>
